# mickey-rat

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
mickey_rat/: __init__.py
