[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "mickey_rat"
dynamic = ["version"]
description = "Don't use this package."
readme = "README.md"
authors = [
    { name = "Mickey Rat", email = "mickeyrat@gmail.com" }
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://pypi.org/project/sigstore/"
Issues = "https://github.com/sigstore/sigstore-python/issues"
Source = "https://github.com/sigstore/sigstore-python"
Documentation = "https://sigstore.github.io/sigstore-python/"

